samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Maintenance_Request__c/Maintenance_Request__c.object-meta.xml
<CustomObject>
    <label>Maintenance Request</label>
    <nameField>
        <label>Request Number</label>
        <type>AutoNumber</type>
        <displayFormat>MR-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Maintenance Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>