samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Maintenance_Request__c/fields/Assigned_Worker__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Worker__c</fullName>
    <label>Assigned Worker</label>
    <referenceTo>Maintenance_Worker__c</referenceTo>
    <relationshipLabel>Maintenance Requests</relationshipLabel>
    <relationshipName>Maintenance_Requests</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>