samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Maintenance_Request__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>