samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Maintenance_Request__c/fields/Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Requested__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Requested</label>
    <required>true</required>
    <type>Date</type>
</CustomField>