samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Maintenance_Request__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>High</fullName>
                <label>High (Same Day)</label>
            </value>
            <value>
                <fullName>Emergency</fullName>
                <label>Emergency (2hr)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>