samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Maintenance_Request__c/fields/Tenant_Present__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Present__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Tenant Must Be Present?</label>
    <type>Checkbox</type>
</CustomField>